# sage-lore

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
agents/: adversarial_reviewer.md  analyst.md  chunk-decomposer.md  code-reviewer.md  data-transformer.md  dev.md  extraction-verifier.md  fixer.md  implementer.md  platform-interpreter.md  quality-reviewer.md  spec-reviewer.md  story-definer.md  summarizer.md  test-reviewer.md
docs/reference/: flow-control.md  primitives.md
editors/: README.md
editors/kate/: scroll.xml
editors/vim/: .gitkeep
editors/vscode/: .gitkeep
examples/: platform_usage.scroll
examples/scrolls/: bad-scroll-hardcoded-secret.scroll  good-scroll-variable-refs.scroll  test-backends.scroll  test-single-chunk.scroll  test-system-primitives.scroll
scrolls/: build-from-forgejo.scroll  code-review.scroll  complete-epic.scroll  complete-story.scroll  consensus-vote.scroll  create-chunks.scroll  create-epic.scroll  dev-story.scroll  implement-and-review.scroll  implement-chunk.scroll  run-epic.scroll  run-milestone.scroll  run-story.scroll
scrolls/adapters/: chunk-from-forgejo.scroll  epic-from-forgejo.scroll  story-from-forgejo.scroll
share/config/: config.yaml
src/: lib.rs  main.rs
src/auth/: credential_helper.rs  mod.rs  store.rs  types.rs
src/cli/: auth.rs  init.rs  lsp.rs  mod.rs  run.rs
src/config/: .gitkeep  hierarchy.rs  mod.rs  paths.rs  resolver.rs  secrets.rs
src/interfaces/: .gitkeep
test-inputs/: chunk-20-full.yaml  chunk-20-input.yaml  story-4.yaml
tests/: integration_tests.rs  platform_primitive_test.rs  schema_serde_roundtrip.rs  secure_tests.rs
(+242 files in other folders)
