[package]
name = "sage-lore"
version = "1.0.0-beta.1.1"
edition = "2021"
description = "LLM Orchestration Engine - deterministic scroll execution for AI workflows"
license = "MIT"
repository = "https://github.com/kwg/sage-lore"

[package.metadata.deb]
name = "sage-lore"
section = "devel"
priority = "optional"
assets = [
    ["target/release/sage-lore", "/usr/bin/sage-lore", "755"],
    ["share/config/config.yaml", "/etc/sage-lore/config.yaml", "644"],
    ["share/config/security/policy.yaml", "/etc/sage-lore/security/policy.yaml", "644"],
]
extended-description = "Deterministic scroll execution engine for AI workflows. Part of the SAGE Method."

[[bin]]
name = "sage-lore"
path = "src/main.rs"

[lib]
name = "sage_lore"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.16"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
dotenvy = "0.15"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "default-tls"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
libc = "0.2.183"
pest = "2.7"
pest_derive = "2.7"
tower-lsp = "0.20"
futures = "0.3"
futures-util = "0.3"

[dev-dependencies]
static_assertions = "1.1"
tempfile = "3.16"
httpmock = "0.8"
anyhow = "1.0"
tokio-test = "0.4"
